astroid's ChangeLog
===================


What's New in astroid 4.1.0?
============================
Release date: TBA

* Make `type.__new__()` raise clear errors instead of returning `None`

* Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them
  available on all object types, not just functions.

  Closes #2742
  Closes #2741
  Closes pylint-dev/pylint#6094


What's New in astroid 4.0.2?
============================
Release date: TBA



What's New in astroid 4.0.1?
============================
Release date: 2025-10-11

* Suppress ``SyntaxWarning`` for invalid escape sequences and return in finally on
  Python 3.14 when parsing modules.

* Assign ``Import`` and ``ImportFrom`` nodes to module locals if used with ``global``.

  Closes pylint-dev/pylint#10632


What's New in astroid 4.0.0?
============================
Release date: 2025-10-05

* Support constraints from ternary expressions in inference.

  Closes pylint-dev/pylint#9729

* Handle deprecated `bool(NotImplemented)` cast in const nodes.

* Add support for boolean truthiness constraints (`x`, `not x`) in inference.

  Closes pylint-dev/pylint#9515

* Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.

  Closes pylint-dev/pylint#10525

* Prevent crash when parsing deeply nested parentheses causing MemoryError in python's built-in ast.

  Closes #2643

* Fix crash when inferring namedtuple with invalid field name looking like f-string formatting.

  Closes #2519

* Fix false positive no-member in except * handler.

  Closes pylint-dev/pylint#9056

* Fix crash when comparing invalid dict literal

  Closes #2522

* Removed internal functions ``infer_numpy_member``, ``name_looks_like_numpy_member``, and
  ``attribute_looks_like_numpy_member`` from ``astroid.brain.brain_numpy_utils``.

* To alleviate circular imports, the ``manager`` argument to ``AstroidBuilder()`` is now required.

* Constants now have a parent of ``nodes.SYNTHETIC_ROOT``.
